--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,11 @@
 .slick-next:before {
   display: none;
 }
+
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
